divided api in two groups (messages, users) changed error message for send_message (take into consideration more users)
